force-app/main/default/objects/Campaign/fields/ActualStartDate__c.field-meta.xml
<CustomField>
    <fullName>ActualStartDate__c</fullName>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>