force-app/main/default/objects/Campaign/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Range of ages to be targeted for the campaign</description>
    <label>Age</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Age</valueSetName>
    </valueSet>
</CustomField>