force-app/main/default/objects/Campaign/fields/Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>Agency_Email__c</fullName>
    <label>Agency Email</label>
    <type>Email</type>
</CustomField>