force-app/main/default/objects/Campaign/fields/Campaign_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Actual_Cost__c</fullName>
    <label>Campaign Actual Cost</label>
    <summarizedField>Campaign_Cost__c.Actual_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Campaign_Cost__c.Actual_Cost__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Cost__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>