force-app/main/default/objects/Campaign/fields/Campaign_Budget__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Budget__c</fullName>
    <label>Campaign Budget (Baht)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>