force-app/main/default/objects/Campaign/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Campaign Code</label>
    <type>AutoNumber</type>
</CustomField>