force-app/main/default/objects/Campaign/fields/Campaign_Info_Validated__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Info_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign Info Validated</label>
    <type>Checkbox</type>
</CustomField>