force-app/main/default/objects/Campaign/fields/CEOName__c.field-meta.xml
<CustomField>
    <fullName>CEOName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEO Name (If required)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEOName</relationshipName>
    <type>Lookup</type>
</CustomField>