force-app/main/default/objects/Campaign/fields/Clone_Owner__c.field-meta.xml
<CustomField>
    <fullName>Clone_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns2</relationshipName>
    <type>Lookup</type>
</CustomField>