force-app/main/default/objects/Campaign/fields/Communication_Budget__c.field-meta.xml
<CustomField>
    <fullName>Communication_Budget__c</fullName>
    <label>Communication Budget (Baht)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>