force-app/main/default/objects/Campaign/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>