force-app/main/default/objects/Campaign/fields/Concept_Key_Mesage__c.field-meta.xml
<CustomField>
    <fullName>Concept_Key_Mesage__c</fullName>
    <label>Concept/ Key Message</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>