force-app/main/default/objects/Campaign/fields/Director_Name__c.field-meta.xml
<CustomField>
    <fullName>Director_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Director_Name</relationshipName>
    <type>Lookup</type>
</CustomField>