force-app/main/default/objects/Campaign/fields/HOBSVPName__c.field-meta.xml
<CustomField>
    <fullName>HOBSVPName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HOB/SVP Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HOBSVPName</relationshipName>
    <type>Lookup</type>
</CustomField>