force-app/main/default/objects/Campaign/fields/Home_District__c.field-meta.xml
<CustomField>
    <fullName>Home_District__c</fullName>
    <label>Home District</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>District</valueSetName>
    </valueSet>
</CustomField>