force-app/main/default/objects/Campaign/fields/Information_and_Content_in_Media__c.field-meta.xml
<CustomField>
    <fullName>Information_and_Content_in_Media__c</fullName>
    <label>Information &amp; Content in Media (Offline)</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>