force-app/main/default/objects/Campaign/fields/Information_Content_in_Media_Online__c.field-meta.xml
<CustomField>
    <fullName>Information_Content_in_Media_Online__c</fullName>
    <label>Information &amp; Content in Media (Online)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>