force-app/main/default/objects/Campaign/fields/Is_sent_to_Agency__c.field-meta.xml
<CustomField>
    <fullName>Is_sent_to_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is sent to Agency</label>
    <type>Checkbox</type>
</CustomField>