force-app/main/default/objects/Campaign/fields/Is_sent_to_Corp__c.field-meta.xml
<CustomField>
    <fullName>Is_sent_to_Corp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag when send campaign brief form to corporate marketing or marketing agency</description>
    <label>Is sent to Corp</label>
    <type>Checkbox</type>
</CustomField>