force-app/main/default/objects/Campaign/fields/Launch_Reason__c.field-meta.xml
<CustomField>
    <fullName>Launch_Reason__c</fullName>
    <label>Launch Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>