force-app/main/default/objects/Campaign/fields/ManagerName__c.field-meta.xml
<CustomField>
    <fullName>ManagerName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ManagerName</relationshipName>
    <type>Lookup</type>
</CustomField>