force-app/main/default/objects/Campaign/fields/Manger_name__c.field-meta.xml
<CustomField>
    <fullName>Manger_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manger name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns4</relationshipName>
    <type>Lookup</type>
</CustomField>