force-app/main/default/objects/Campaign/fields/Material_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Material_Requirement__c</fullName>
    <label>Material Requirement</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>