force-app/main/default/objects/Campaign/fields/Material_Sizing_Budget_Specification__c.field-meta.xml
<CustomField>
    <fullName>Material_Sizing_Budget_Specification__c</fullName>
    <label>Material Sizing/ Budget &amp; Specification</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>