force-app/main/default/objects/Campaign/fields/MDCCOName__c.field-meta.xml
<CustomField>
    <fullName>MDCCOName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MD/CCO Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MDCCOName</relationshipName>
    <type>Lookup</type>
</CustomField>