force-app/main/default/objects/Campaign/fields/Mood_Tone__c.field-meta.xml
<CustomField>
    <fullName>Mood_Tone__c</fullName>
    <label>Mood &amp; Tone</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>