force-app/main/default/objects/Campaign/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Other detail of target customer</description>
    <label>Interest/Others</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>