force-app/main/default/objects/Campaign/fields/Other_Occupations__c.field-meta.xml
<CustomField>
    <fullName>Other_Occupations__c</fullName>
    <label>Specify for Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>