force-app/main/default/objects/Campaign/fields/Owner_Company_for_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Company_for_Email__c</fullName>
    <formula>Owner.CompanyName</formula>
    <label>Owner&#39;s Company Name</label>
    <type>Text</type>
</CustomField>