force-app/main/default/objects/Campaign/fields/Owner_for_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_for_Email__c</fullName>
    <formula>Owner.FirstName &amp; &#39; &#39; &amp; Owner.LastName</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>