force-app/main/default/objects/Campaign/fields/Personal_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Personal_Monthly_Income__c</fullName>
    <label>Personal Monthly Income</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income</valueSetName>
    </valueSet>
</CustomField>