force-app/main/default/objects/Campaign/fields/Purpose_of_Buying__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Buying__c</fullName>
    <label>Purpose of Buying</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ซื้อเพื่ออยู่อาศัย / For Residence</fullName>
            </value>
            <value>
                <fullName>Investment (For Sale)</fullName>
                <label>การลงทุน (ขายต่อ) / Investment (Selling)</label>
            </value>
            <value>
                <fullName>Investment (For Rent)</fullName>
                <label>การลงทุน (ปล่อยเช่า) / Investment (Rental)</label>
            </value>
            <value>
                <fullName>การลงทุน (ขายต่อและปล่อยเช่า) Investment (Selling &amp; Rental)</fullName>
                <label>การลงทุน (ขายต่อและปล่อยเช่า) / Investment (Selling &amp; Rental)</label>
            </value>
            <value>
                <fullName>Buy for family members/Property Asset</fullName>
                <label>ซื้อให้คนในครอบครัว (เก็บเป็นทรัพย์สิน) / Buy for family member (Property Asset)</label>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>Close to your current residence</fullName>
                <isActive>false</isActive>
                <label>Close to your current residence</label>
            </value>
            <value>
                <fullName>Convenient Transportation</fullName>
                <isActive>false</isActive>
                <label>Convenient Transportation</label>
            </value>
            <value>
                <fullName>Good Environment</fullName>
                <isActive>false</isActive>
                <label>Good Environment</label>
            </value>
            <value>
                <fullName>Near workplace</fullName>
                <isActive>false</isActive>
                <label>Near workplace</label>
            </value>
            <value>
                <fullName>Separated/Extended Family</fullName>
                <isActive>false</isActive>
                <label>Separated/Extended Family</label>
            </value>
            <value>
                <fullName>ซื้อเก็บเอาไว้ในอนาคต</fullName>
                <isActive>false</isActive>
                <label>ซื้อเก็บเอาไว้ในอนาคต</label>
            </value>
            <value>
                <fullName>ซื้อให้คนในครอบครัว</fullName>
                <isActive>false</isActive>
                <label>ซื้อให้คนในครอบครัว</label>
            </value>
            <value>
                <fullName>บ้านหลังที่สอง</fullName>
                <isActive>false</isActive>
                <label>บ้านหลังที่สอง</label>
            </value>
            <value>
                <fullName>บ้านหลังแรก</fullName>
                <isActive>false</isActive>
                <label>บ้านหลังแรก</label>
            </value>
            <value>
                <fullName>ใกล้ที่อยู่อาศัยเดิม</fullName>
                <isActive>false</isActive>
                <label>ใกล้ที่อยู่อาศัยเดิม</label>
            </value>
            <value>
                <fullName>ใกล้โรงเรียนลูก</fullName>
                <isActive>false</isActive>
                <label>ใกล้โรงเรียนลูก</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>