force-app/main/default/objects/Campaign/fields/SharetoKM2__c.field-meta.xml
<CustomField>
    <fullName>SharetoKM2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share to KM2</label>
    <type>Checkbox</type>
</CustomField>