force-app/main/default/objects/Campaign/fields/Special_Requirement_Remark__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirement_Remark__c</fullName>
    <label>Special Requirement/ Remark</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>