force-app/main/default/objects/Campaign/fields/Sum_of_Media_Offline__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Media_Offline__c</fullName>
    <label>Sum of Media - Offline</label>
    <summarizedField>Campaign_Media__c.Budget__c</summarizedField>
    <summaryFilterItems>
        <field>Campaign_Media__c.Media_Type__c</field>
        <operation>equals</operation>
        <value>Offline media</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Campaign_Media__c.Disable__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Media__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>