force-app/main/default/objects/Campaign/fields/Sum_of_Media_Online__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Media_Online__c</fullName>
    <label>Sum of Media - Online</label>
    <summarizedField>Campaign_Media__c.Budget__c</summarizedField>
    <summaryFilterItems>
        <field>Campaign_Media__c.Media_Type__c</field>
        <operation>equals</operation>
        <value>Online media</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Campaign_Media__c.Disable__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Media__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>