force-app/main/default/objects/Campaign/fields/Sum_of_Others__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Others__c</fullName>
    <label>Sum of Others</label>
    <summarizedField>Campaign_Cost__c.Actual_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Campaign_Cost__c.Campaign_Cost_Type__c</field>
        <operation>equals</operation>
        <value>Others</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Cost__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>