force-app/main/default/objects/Campaign/fields/SummaryCampaignCost__c.field-meta.xml
<CustomField>
    <fullName>SummaryCampaignCost__c</fullName>
    <formula>Sum_of_Promotion__c +  Sum_of_Others__c +  Sum_of_Online_Media__c +  Sum_of_Offline_Media__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Campaign Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>