force-app/main/default/objects/Campaign/fields/Target_Ananda_Customer__c.field-meta.xml
<CustomField>
    <fullName>Target_Ananda_Customer__c</fullName>
    <label>Target Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Target Ananda Customer</fullName>
                <label>Ananda Customer</label>
            </value>
            <value>
                <fullName>Not Target Ananda Customer</fullName>
                <label>Not Ananda Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>