force-app/main/default/objects/Campaign/fields/Target_Lead__c.field-meta.xml
<CustomField>
    <fullName>Target_Lead__c</fullName>
    <label>Target Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>