force-app/main/default/objects/Campaign/fields/Target_Other_KPI__c.field-meta.xml
<CustomField>
    <fullName>Target_Other_KPI__c</fullName>
    <label>Target Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>