force-app/main/default/objects/Campaign/fields/Target_Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Target_Sales_Unit__c</fullName>
    <label>Target Sales Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>