force-app/main/default/objects/Campaign/fields/Target_Walk_in__c.field-meta.xml
<CustomField>
    <fullName>Target_Walk_in__c</fullName>
    <label>Target Walk-in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>