force-app/main/default/objects/Campaign/fields/Temp_Approve_Result__c.field-meta.xml
<CustomField>
    <fullName>Temp_Approve_Result__c</fullName>
    <label>Temp Approve Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>