force-app/main/default/objects/Campaign/fields/Temp_Approved__c.field-meta.xml
<CustomField>
    <fullName>Temp_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Approved</label>
    <type>Checkbox</type>
</CustomField>