force-app/main/default/objects/Campaign/fields/Temp_Clone__c.field-meta.xml
<CustomField>
    <fullName>Temp_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Clone</label>
    <type>Checkbox</type>
</CustomField>