force-app/main/default/objects/Campaign/fields/Temp_Exceed_Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Temp_Exceed_Actual_End_Date__c</fullName>
    <formula>ActualEndDate__c &lt; TODAY()</formula>
    <label>Temp Exceed Actual End Date</label>
    <type>Checkbox</type>
</CustomField>