force-app/main/default/objects/Campaign/fields/Temp_Notify_Expire__c.field-meta.xml
<CustomField>
    <fullName>Temp_Notify_Expire__c</fullName>
    <formula>ActualEndDate__c  - 7</formula>
    <label>Temp Notify Expire</label>
    <type>Date</type>
</CustomField>