force-app/main/default/objects/Campaign/fields/Temp_Ready_to_Launch__c.field-meta.xml
<CustomField>
    <fullName>Temp_Ready_to_Launch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Ready to Launch</label>
    <type>Checkbox</type>
</CustomField>