force-app/main/default/objects/Campaign/fields/Temp_Share_to_KM__c.field-meta.xml
<CustomField>
    <fullName>Temp_Share_to_KM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share to KM</label>
    <type>Checkbox</type>
</CustomField>