force-app/main/default/objects/Campaign/fields/Temp_to_complete_task__c.field-meta.xml
<CustomField>
    <fullName>Temp_to_complete_task__c</fullName>
    <label>Temp to complete task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>