force-app/main/default/objects/Campaign/fields/TestSharetoKM__c.field-meta.xml
<CustomField>
    <fullName>TestSharetoKM__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Test - Share to KM</label>
    <type>Checkbox</type>
</CustomField>