force-app/main/default/objects/Campaign/fields/Text_Home_District__c.field-meta.xml
<CustomField>
    <fullName>Text_Home_District__c</fullName>
    <label>Home District</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>