force-app/main/default/objects/Campaign/fields/Text_Province__c.field-meta.xml
<CustomField>
    <fullName>Text_Province__c</fullName>
    <label>Province</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>