force-app/main/default/objects/Campaign/fields/Unit_Value_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Unit_Value_Threshold__c</fullName>
    <label>Unit Value Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>