force-app/main/default/objects/Campaign/fields/User_Brief_Form__c.field-meta.xml
<CustomField>
    <fullName>User_Brief_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns3</relationshipName>
    <type>Lookup</type>
</CustomField>