force-app/main/default/objects/Campaign/validationRules/Actual_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ActualEndDate__c &lt; ActualStartDate__c</errorConditionFormula>
    <errorDisplayField>ActualStartDate__c</errorDisplayField>
    <errorMessage>The campaign end date should not be before the start date.</errorMessage>
</ValidationRule>