force-app/main/default/objects/Campaign/validationRules/Add_Launch_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Launch_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>IF(OR(StartDate != ActualStartDate__c ,EndDate!=ActualEndDate__c), ISBLANK(Launch_Reason__c) ,false)</errorConditionFormula>
    <errorDisplayField>Launch_Reason__c</errorDisplayField>
    <errorMessage>Please input &#39;Launch Reason&#39;.</errorMessage>
</ValidationRule>