force-app/main/default/objects/Campaign/validationRules/Agency_info_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Agency_info_required</fullName>
    <active>false</active>
    <errorConditionFormula>IF(NOT(ISBLANK(Agency_Name__c )),ISBLANK(Agency_Email__c ),False)</errorConditionFormula>
    <errorDisplayField>Agency_Email__c</errorDisplayField>
    <errorMessage>Please enter information</errorMessage>
</ValidationRule>