force-app/main/default/objects/Campaign/validationRules/Cannot_edit_actual_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_actual_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>SharetoKM2__c = true &amp;&amp;  ISCHANGED( ActualEndDate__c )</errorConditionFormula>
    <errorDisplayField>ActualEndDate__c</errorDisplayField>
    <errorMessage>Please request memo to extend campaign period</errorMessage>
</ValidationRule>