force-app/main/default/objects/Campaign/validationRules/Check_Campaign_Budget.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Campaign_Budget</fullName>
    <active>true</active>
    <description>Sum of communication budget and promotion budget is not over campaign budget</description>
    <errorConditionFormula>Communication_Budget__c &gt; Campaign_Budget__c || Promotion_Budget__c  &gt; Campaign_Budget__c || (Communication_Budget__c +  Promotion_Budget__c ) &gt;  Campaign_Budget__c</errorConditionFormula>
    <errorDisplayField>Campaign_Budget__c</errorDisplayField>
    <errorMessage>Sum of communication budget and promotion budget should not exceed campaign budget.</errorMessage>
</ValidationRule>