force-app/main/default/objects/Campaign/validationRules/Must_Fill_Province_District.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Fill_Province_District</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
NOT(ISNEW()),
(ISBLANK( Home_District__c ) &amp;&amp; ISBLANK( Text_Home_District__c )) || (
ISBLANK(Work_District__c ) &amp;&amp; ISBLANK( Text_Work_District__c )) || 
ISBLANK(Text_Province__c ) &amp;&amp; ISBLANK( Province__c )
)</errorConditionFormula>
    <errorMessage>Please input province, home district, work district</errorMessage>
</ValidationRule>