force-app/main/default/objects/Campaign/validationRules/Read_Only_in_DetailEdit_Page.validationRule-meta.xml
<ValidationRule>
    <fullName>Read_Only_in_DetailEdit_Page</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(Name = &#39;&#39;) ,  ISCHANGED( Name ))</errorConditionFormula>
    <errorMessage>Campaign name is unable to be edited!</errorMessage>
</ValidationRule>