force-app/main/default/objects/Campaign/validationRules/Required_Specify_for_Occupation.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Specify_for_Occupation</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(Occupation__c, &quot;Others&quot;)
&amp;&amp;  ISBLANK(Other_Occupations__c)</errorConditionFormula>
    <errorDisplayField>Other_Occupations__c</errorDisplayField>
    <errorMessage>Please fill-in Specify for Occupation if Occupation is อื่นๆ (Other)</errorMessage>
</ValidationRule>