force-app/main/default/objects/Campaign/validationRules/Sum_of_campaign_media_budget.validationRule-meta.xml
<ValidationRule>
    <fullName>Sum_of_campaign_media_budget</fullName>
    <active>true</active>
    <errorConditionFormula>(Sum_of_Media_Offline__c + Sum_of_Media_Online__c)  &gt;  Campaign_Budget__c</errorConditionFormula>
    <errorMessage>Sum of campaign media budget should not exceed campaign budget</errorMessage>
</ValidationRule>