force-app/main/default/objects/Campaign/listViews/All_Campaign.listView-meta.xml
<ListView>
    <fullName>All_Campaign</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Owner_for_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaign</label>
</ListView>