force-app/main/default/objects/Campaign/listViews/Org_Campaign_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Campaign_Hierarchy</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Owner_for_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Campaign Hierarchy</label>
</ListView>