force-app/main/default/objects/Campaign/listViews/Share_Campaign_in_KM.listView-meta.xml
<ListView>
    <fullName>Share_Campaign_in_KM</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>ActualStartDate__c</columns>
    <columns>ActualEndDate__c</columns>
    <columns>Owner_for_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SharetoKM2__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Launch</value>
    </filters>
    <label>Share Campaign  in KM</label>
</ListView>